<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NewRegisterActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_bg"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ToolbarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="67dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar"
        app:layout_constraintVertical_bias="1.0">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!-- Title input -->
                <EditText
                    android:id="@+id/etTitleNewRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/etTitle"
                    android:inputType="textCapWords|text"
                    android:maxLines="1"
                    android:padding="15dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <!-- Acount input -->
                <EditText
                    android:id="@+id/etAccountNewRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/etAcount"
                    android:inputType="textCapWords|text"
                    android:maxLines="1"
                    android:padding="15dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <!-- Username input -->
                <EditText
                    android:id="@+id/etUsernameNewRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/etUsername"
                    android:inputType="textCapWords|text"
                    android:maxLines="1"
                    android:padding="15dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:passwordToggleEnabled="true">
                <!-- Password input -->
                <EditText
                    android:id="@+id/etPasswordNewRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/etPassword"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="15dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <!-- Website input -->
                <EditText
                    android:id="@+id/etWebSiteNewRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/etWebSite"
                    android:inputType="textWebEmailAddress"
                    android:maxLines="1"
                    android:padding="15dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <!-- Notes input -->
                <EditText
                    android:id="@+id/etNotesNewRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:height="150dp"
                    android:gravity="start"
                    android:hint="@string/etNote"
                    android:inputType="textCapSentences|textMultiLine"
                    android:padding="15dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnAddNewRegister"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/button_primary"
                android:onClick="addRegister"
                android:drawableLeft="@drawable/baseline_add_24"
                android:text="Guardar" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>